RESOLVED FIXED 278762
[css-view-transitions-2] at-rule-in-layer-cascade fails
https://bugs.webkit.org/show_bug.cgi?id=278762
Summary [css-view-transitions-2] at-rule-in-layer-cascade fails
Matt Woodrow
Reported 2024-08-27 21:43:40 PDT
Looks like @layer sorting isn't handled correctly.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-27 21:44:02 PDT
Matt Woodrow
Comment 2 2024-08-27 21:45:51 PDT
EWS
Comment 3 2024-08-28 00:43:26 PDT
Committed 282832@main (4f34754b7b36): <https://commits.webkit.org/282832@main> Reviewed commits have been landed. Closing PR #32799 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.