[css-view-transitions-2] at-rule-in-layer-cascade fails. https://bugs.webkit.org/show_bug.cgi?id=278762 <rdar://134830743>

Reviewed by Tim Nguyen.

ViewTransitionRules need to be added to m_collectedResolverMutatingRules, and handled after any @layer sorting has been applied.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-in-layer-cascade-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/at-rule-in-layer-cascade-external-stylesheet-expected.txt:
* Source/WebCore/style/RuleSetBuilder.cpp:
(WebCore::Style::RuleSetBuilder::addChildRule):
(WebCore::Style::RuleSetBuilder::addMutatingRulesToResolver):

Canonical link: https://commits.webkit.org/282832@main