Source/WebCore/style/RuleSetBuilder.cpp
@@ -208,6 +208,7 @@ void RuleSetBuilder::addChildRule(Ref<StyleRuleBase> rule)
     case StyleRuleType::FontFeatureValues:
     case StyleRuleType::Keyframes:
     case StyleRuleType::Property:
+    case StyleRuleType::ViewTransition:
         disallowDynamicMediaQueryEvaluationIfNeeded();
         if (m_resolver)
             m_collectedResolverMutatingRules.append({ rule, m_currentCascadeLayerIdentifier });
@@ -219,10 +220,6 @@ void RuleSetBuilder::addChildRule(Ref<StyleRuleBase> rule)
             addChildRules(supportsRule->childRules());
         return;
     }
-    case StyleRuleType::ViewTransition:
-        if (m_ruleSet)
-            m_ruleSet->setViewTransitionRule(uncheckedDowncast<StyleRuleViewTransition>(rule));
-        return;
 
     case StyleRuleType::Import:
     case StyleRuleType::Margin:
@@ -478,6 +475,10 @@ void RuleSetBuilder::addMutatingRulesToResolver()
             auto& registry = m_resolver->document().styleScope().customPropertyRegistry();
             registry.registerFromStylesheet(styleRuleProperty->descriptor());
             continue;
+        }
+        if (auto* styleRuleViewTransition = dynamicDowncast<StyleRuleViewTransition>(rule.get())) {
+            if (m_ruleSet)
+                m_ruleSet->setViewTransitionRule(*styleRuleViewTransition);
         }
     }
 }
